testsuite/tests/typecheck/should_fail/tcfail086.stderr
tcfail086.hs:6:38: error: [GHC-16437]
    • Can't make a derived instance of ‘Eq Ex’:
        Constructor ‘Ex’ has existential type variables in its type
    • In the data type declaration for ‘Ex’
    Suggested fix: Use a standalone deriving declaration instead

